--- a/core/templates/edit_profile.html
+++ b/core/templates/edit_profile.html
@@ -1,31 +1,42 @@
-{% extends "home.html" %}
+{% extends 'home.html' %}
 
-{% block title %}Edit Profile{% endblock title %}
+{% block title %}
+  Edit Profile
+{% endblock %}
 
 {% block content %}
-    <h1>Edit Profile</h1>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="full-name">
-            <label for="first-name">First Name:</label>
-            <input type="text" name="first_name" id="first-name" value="{{ user.first_name }}">
-            <label for="last-name">Last Name:</label>
-            <input type="text" name="last_name" id="last-name" value="{{ user.last_name }}">
+<h1 class="text-2xl font-bold mb-4 text-center">Edit Profile</h1>
+<form method="POST" enctype="multipart/form-data" class="max-w-md bg-white p-6 rounded-3xl shadow-lg mx-auto">
+    {% csrf_token %}
+    <div class="mb-4 flex">
+        <div class="mr-2 w-1/2">
+            <label for="first-name" class="block text-sm font-medium text-gray-700">First Name:</label>
+            <input type="text" name="first_name" id="first-name" value="{{ user.first_name }}" class="mt-1 p-2 bg-slate-200 border rounded-md w-full">
         </div>
-        <div class="email-field">
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" value="{{ user.email }}">
+        <div class="w-1/2">
+            <label for="last-name" class="block text-sm font-medium text-gray-700">Last Name:</label>
+            <input type="text" name="last_name" id="last-name" value="{{ user.last_name }}" class="mt-1 p-2 bg-slate-200 border rounded-md w-full">
         </div>
-        <div>
-            <label for="profile-pic">Profile Picture:</label>
-            <input type="file" id="profile-pic" name="profile_pic">
-        </div>
-        <div>
-            <label for="bio">Bio:</label>
-            <textarea name="bio" id="bio">{{ user_profile.bio }}</textarea>
-        </div>
-        <div>
-            <button type="submit" class="px-2 text-sm py-1 bg-blue-400 hover:bg-blue-600 text-white shadow-lg rounded-3xl">Save Changes</button>
-        </div>
-    </form>
-{% endblock content %}
+    </div>
+    <div class="mb-4">
+        <label for="email" class="block text-sm font-medium text-gray-700">E-mail:</label>
+        <input type="email" id="email" name="email" value="{{ user.email }}" class="mt-1 p-2 bg-slate-200 border rounded-md w-full">
+    </div>
+    <div class="mb-4">
+        <label for="profile-pic" class="block text-sm font-medium text-gray-700 relative">
+            <img src="{{user_profile.profile_pic.url}}" width="50px" class="inline-block align-middle mr-2" alt="">
+            <span class="inline-block align-middle">Update Profile</span>
+        </label>
+        <input type="file" id="profile-pic" name="profile_pic" style="display: none;">
+    </div>
+    <div class="mb-4">
+        <label for="bio" class="block text-sm font-medium text-gray-700">Bio:</label>
+        <textarea name="bio" id="bio" class="mt-1 p-2 bg-slate-200 border rounded-md w-full">{{ user_profile.bio }}</textarea>
+    </div>
+    <div>
+        <button type="submit" class="px-4 py-2 bg-blue-500 hover:bg-blue-700 text-white rounded-md">Save Changes</button>
+    </div>
+</form>
+
+
+{% endblock %}
