--- a/users/templates/landing-page.html
+++ b/users/templates/landing-page.html
@@ -4,18 +4,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="{% static "css/landing.css" %}" />
+    <script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/landing.css' %}" />
+    <title>SocialHub</title>
   </head>
   <body>
-    <main>
-      <section class="hero">
-        <h1>SocialHub</h1>
-      </section>
-      <section class="parent-container">
-        <a href="/login">Login</a>
-        <a href="/register">Register</a>
-      </section>
-    </main>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
+          <form action="/login/" method="POST" class="sign-in-form">
+            {% csrf_token %}
+            <h2 class="title">Sign in</h2>
+            {% if messages %}
+              {% for message in messages %}
+                <div>{{ message }}</div>
+              {% endfor %}
+            {% endif %}
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username" name="username" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" name="password" />
+            </div>
+            <input type="submit" value="Login" class="btn solid" />
+          </form>
+
+          <form action="/register/" method="POST" class="sign-up-form">
+            {% csrf_token %}
+            <h2 class="title">Sign up</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="First Name" name="first_name" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Last Name" name="last_name" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Username" name="username" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="email" placeholder="Email" name="email" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" name="password" />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Confirm Password" name="confirm_password" />
+            </div>
+            <input type="submit" class="btn" value="Sign up" />
+          </form>
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h2>SocialHub</h2>
+            <p>Don't have an account ? </p>
+            <button class="btn transparent" id="sign-up-btn">Create Now</button>
+          </div>
+          <img src="{% static 'image/log.svg' %}" class="image" alt="" />
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h2>SocialHub</h2>
+            <p>One of Us ? </p>
+            <button class="btn transparent" id="sign-in-btn">Sign in</button>
+          </div>
+          <img src="{% static 'image/register.svg' %}" class="image" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <script src="{% static 'js/app.js' %}"></script>
   </body>
 </html>
