--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -328,10 +328,10 @@
             <div class="w-full flex bg-white px-4 py-4 rounded-md mb-5">
               <div
                 id="profile"
-                class="h-9 w-9 object-top rounded-full bg-slate-200 overflow-hidden"
+                class="h-8 w-9 rounded-full bg-slate-200 p-1 flex justify-center items-center"
               >
                 <img
-                  class="rounded-full"
+                  class="h-full w-full object-cover rounded-full"
                   src="{{following_profile.profile_pic.url}}"
                   alt=""
                 />
@@ -362,10 +362,10 @@
                 <div class="w-full flex bg-white px-4 py-4 rounded-md">
                   <div
                     id="profile"
-                    class="h-9 w-9 object-top rounded-full bg-slate-200 overflow-hidden"
+                    class="h-8 w-9 rounded-full bg-slate-200 p-1 flex justify-center items-center "
                   >
                     <img
-                      class="rounded-full"
+                      class="h-full w-full object-cover rounded-full"
                       src="{{ user.profile_pic.url }}"
                       alt=""
                     />
