--- a/core/templates/search.html
+++ b/core/templates/search.html
@@ -7,8 +7,8 @@
 {% block content %}
 <form class="flex items-center justify-center mb-8" method="POST" >
   {% csrf_token %}
-  <input type="text" class="border-2 border-gray-300 rounded-md px-4 py-2 mr-2 w-64 focus:outline-none focus:w-[80%] focus:border-blue-500 transition-all duration-[0.6s]" name="search" id="search" placeholder="Search">
-  <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Search</button>
+  <input type="text" class=" border-2 border-gray-300 rounded-3xl px-4 py-2 mr-2 w-64 focus:outline-none focus:w-[80%] focus:border-blue-500 transition-all duration-[0.6s]" name="search" id="search" placeholder="Search">
+  <button type="submit" class="bg-blue-500 hover:bg-blue-600 rounded-3xl text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Search</button>
 </form>
 
 
